# rigol-rs

./: Cargo.toml  README.md  shell.nix
wfm/: Cargo.toml  README.md
wfm/src/: parser.rs
wfm/src/parser/: ds1000e.rs
wfm/test/: ds1052e_2ch.wfm
